--- a/drivers/src/sipc/CMakeLists.txt
+++ b/drivers/src/sipc/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Copyright (c) 2019, UNISOC Incorporated
+#
+# SPDX-License-Identifier: Apache-2.0
+
 zephyr_include_directories(.)
 
 zephyr_sources_ifdef(CONFIG_SIPC	smsg.c)
